# qupacabras-db

./: .eslintrc.js  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  package-lock.json  package.json
.husky/: pre-commit
nlg_data_extracted/: .gitignore  pyproject.toml
nlg_data_extracted/data/: db.json
nlg_data_extracted/data/experiments/: result_1.json  result_10.json  result_11.json  result_13.json  result_14.json  result_16.json  result_17.json  result_18.json  result_19.json  result_2.json  result_20.json  result_21.json  result_22.json  result_23.json  result_24.json  result_25.json  result_26.json  result_27.json  result_28.json  result_29.json  result_3.json  result_30.json  result_31.json  result_32.json  result_33.json  result_34.json  result_35.json  result_36.json  result_37.json  result_38.json  result_39.json  result_4.json  result_40.json  result_5.json  result_6.json  result_7.json  result_8.json  result_9.json
nlg_data_extracted/data/games/g14/: g14.nx
nlg_data_extracted/notebooks/: check_device_independence.ipynb  plot_winrates.ipynb
nlg_data_extracted/src/nlg_data/: create_database.py  models.py  papers.py  uncertainty.py  util.py
nlg_data_extracted/src/nlg_data/ingest/: adapter.py  ingest_ion_trap_data.py  ingest_new_ibm_data.py  ingest_old_ibm_data.py  ingest_rigetti_data.py
nlg_data_extracted/src/nlg_data/ingest/new_ibm_data/: experiments.py  game_result.py
public/: CNAME  benchmarks.json  index.html
schemas/: README.md  benchmark-schema.json
scripts/: add-contributor.js  add-pr-metadata.js  analyze-qasm.js  validate-benchmark.js  (+3 more)
(+59 files in other folders)
