[project]
name = "nlg-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jim Furches", email = "jim.furches@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "qiskit-ibm-runtime>=0.38.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tinydb>=4.8.2",
]

[project.scripts]
nlg-data = "nlg_data.create_database:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
